--- a/_frc/7100/7128.md
+++ b/_frc/7100/7128.md
@@ -3,11 +3,13 @@ title: FRC Team 7128
 team:
   type: FRC
   number: 7128
-  name: Greater Melbourne Area High Schools Team 2
+  name: Melbourne XLR8
   rookie_year: 2018
-  location: Hawthorn, Victoria, Australia
+  location: Wantirna, Victoria, Australia
   sponsors:
-  - Greater Melbourne Area High Schools
+  - KIOSK
+  - BAE Systems
+  - Victorian department of education
   links:
     Website:
 ---
