Add information for team 7195

--- a/_frc/7100/7195.md
+++ b/_frc/7100/7195.md
@@ -3,13 +3,15 @@ title: FRC Team 7195
 team:
   type: FRC
   number: 7195
-  name: Portland Raiders
+  name: Portland Raider Robotics
   rookie_year: 2018
   location: Portland, Michigan, USA
   sponsors:
   - Portland High School
+  - THK Automotive
+  - Portland Products
   links:
-    Website:
+    Website: team7195.com
 ---
 
 {% include remove_this_line_and_add_a_paragraph %}
