--- a/_frc/7200/7243.md
+++ b/_frc/7200/7243.md
@@ -3,13 +3,13 @@ title: FRC Team 7243
 team:
   type: FRC
   number: 7243
-  name: High Tech Early College
+  name: Northeast Early College
   rookie_year: 2018
   location: Denver, Colorado, USA
   sponsors:
-  - High Tech Early College
+  - Northeast Early College
   links:
-    Website:
+    Website: https://lobobellos.github.io/
 ---
 
 {% include remove_this_line_and_add_a_paragraph %}
